# av1-toolkit

./: .gitignore  16_plan_internals.md  17_compile_final_plan.md  18_final_review.md  CMakeLists.txt  av1_tile_dec_unit.h
aom-av1-prototype/: 00-decisions.md  01-decoder-api-design.md  02-state-machine.md  03-threading-and-gpu-design.md  04-aom-modification-plan.md  05-implementation-prompts.md  06-vp9-diff-analysis-prompt.md  07-scrub-report-prompt.md  review_prompts.py  run_prompts.py  run_verification.py  vp9_analysis_prompts.py  vp9_to_aom_guide.py
aom-av1-prototype/aom_mod_guide_output/: aom_modification_guide.md  guide_log.txt  metadata.json
aom-av1-prototype/prompt_outputs/: run_log.txt
aom-av1-prototype/prompt_outputs/prompt_01_malloc_override/: av1_mem_override.c  metadata.json  raw_response.md  test_mem_override.c  unnamed_1.c
aom-av1-prototype/prompt_outputs/prompt_02_job_queue/: av1_job_queue.c  metadata.json  raw_response.md  unnamed_1.c  unnamed_3.c
aom-av1-prototype/prompt_outputs/prompt_03_query_create/: av1_decoder_api.h  metadata.json  raw_response.md  test_query_create.c  unnamed_2.c
aom-av1-prototype/prompt_outputs/prompt_04_copy_thread/: metadata.json  raw_response.md  unnamed_2.c  unnamed_3.c
aom-av1-prototype/prompt_outputs/prompt_05_av1_decode/: av1_decoder_api.c  av1_decoder_api.h  ivf_parser.c  ivf_parser.h  metadata.json  raw_response.md  unnamed_5.c
aom-av1-prototype/prompt_outputs/prompt_06_sync_output/: av1_decoder_api.h  checkpoint_1.md  metadata.json  raw_response.md  test_sync_output.c  unnamed_2.c  unnamed_3.c  y4m_writer.c
aom-av1-prototype/prompt_outputs/prompt_07_flush_destroy/: av1_decoder_api.c  checkpoint_1.md  metadata.json  raw_response.md  unnamed_3.c
aom-av1-prototype/prompt_outputs/prompt_08_gpu_thread_stub/: av1_gpu_thread.h  metadata.json  raw_response.md  unnamed_2.c  unnamed_3.c
aom-av1-prototype/prompt_outputs/prompt_09_integration_test/: generate_test_ivf.c  metadata.json  raw_response.md  unnamed_1.c  unnamed_2.c  unnamed_3.c  unnamed_4.c  unnamed_5.c  unnamed_6.c  unnamed_7.c  unnamed_8.c  unnamed_9.c
aom-av1-prototype/review_outputs/: review_log.txt  review_progress.md
aom-av1-prototype/review_outputs/av1_copy_thread/: av1_copy_thread.c  metadata.json  raw_response.md
aom-av1-prototype/review_outputs/av1_decoder_api_create/: metadata.json  raw_response.md  unnamed_1.c
aom-av1-prototype/review_outputs/av1_decoder_api_helpers/: metadata.json  raw_response.md  unnamed_1.c
aom-av1-prototype/review_outputs/av1_decoder_api_lifecycle/: av1_decoder_api.c  metadata.json  raw_response.md
aom-av1-prototype/review_outputs/av1_decoder_api_output_pipeline/: av1_decoder_api.c  metadata.json  raw_response.md
aom-av1-prototype/review_outputs/av1_gpu_thread/: av1_gpu_thread.c  av1_gpu_thread.h  metadata.json  raw_response.md  unnamed_1.c  unnamed_2.c  unnamed_3.c  unnamed_4.c
aom-av1-prototype/review_outputs/av1_job_queue/: metadata.json  raw_response.md  unnamed_1.c
aom-av1-prototype/review_outputs/av1_mem_override/: av1_mem_override.c  metadata.json  raw_response.md
aom-av1-prototype/review_outputs/ivf_parser/: ivf_parser.c  metadata.json  raw_response.md
aom-av1-prototype/review_outputs/test_e2e/: metadata.json  raw_response.md  test_e2e.c
aom-av1-prototype/review_outputs/y4m_writer/: metadata.json  raw_response.md  y4m_writer.c
aom-av1-prototype/verification_outputs/: verify_log.txt
aom-av1-prototype/verification_outputs/consistency/: av1_decoder_api.h  metadata.json  raw_response.md
aom-av1-prototype/verification_outputs/merge/: CMakeLists.txt  av1_copy_thread.c  av1_copy_thread.cpp  av1_copy_thread.h  av1_decoder_api.c  av1_decoder_api.cpp  av1_decoder_api.h  av1_gpu_thread.c  av1_gpu_thread.cpp  av1_gpu_thread.h  av1_job_queue.c  av1_job_queue.h  av1_mem_override.c  av1_mem_override.cpp  av1_mem_override.h  checkpoint_1.md  checkpoint_2.md  generate_test_ivf.cpp  ivf_parser.c  ivf_parser.h  metadata.json  raw_response.md  test_copy_thread.c  test_copy_thread.cpp  test_e2e.c  test_e2e.cpp  test_gpu_thread.c  test_gpu_thread.cpp  test_job_queue.c  test_job_queue.cpp  test_mem_override.c  test_mem_override.cpp  unnamed_10.c  unnamed_11.c  unnamed_12.c  unnamed_13.c  unnamed_14.c  unnamed_15.c  unnamed_16.c  unnamed_17.c  (+12 more)
aom-av1-prototype/verification_outputs/review_01_malloc_override/: av1_mem_override.h  metadata.json  raw_response.md  unnamed_1.c  unnamed_2.c  unnamed_3.c  unnamed_4.c  unnamed_6.c
aom-av1-prototype/verification_outputs/review_02_job_queue/: metadata.json  raw_response.md  unnamed_1.c  unnamed_2.c
aom-av1-prototype/verification_outputs/review_03_query_create/: metadata.json  raw_response.md  unnamed_1.c  unnamed_2.c
aom-av1-prototype/verification_outputs/review_04_copy_thread/: av1_copy_thread.c  metadata.json  raw_response.md  test_copy_thread.c  unnamed_1.c  (+1 more)
aom-av1-prototype/vp9_analysis_outputs/: vp9_analysis_log.txt  vp9_progress.md
av1-spec-training/: av1-gpt-oss-(20B)-Fine-tuning_drive.ipynb  av1-gpt-oss-(20B)-Fine-tuning_patched.ipynb  av1_decoder_decoding_dataset.harmony.jsonl  av1_decoder_decoding_dataset.json  general-training-data-set.json
codec-dev-av1/: av1_fg_aom_const.h  av1_fg_common.h  av1_fg_prng.h  av1_film_grain.h  codec_test  test_fg  test_fg_gtest  test_seg  test_seg_gtest
codec-dev-av1/codec-av1-lib/: av1_fg_aom_const.h  av1_fg_common.h  av1_fg_dbg.cpp  av1_fg_dbg.h  av1_fg_gaussian.cpp  av1_fg_gaussian.h  av1_fg_grain_gen.h  av1_fg_scaling.h  av1_seg_common.cpp  av1_seg_common.h  av1_seg_dbg.cpp  av1_seg_dbg.h  fg_prng.h  film_grain.cpp  film_grain.hpp  grain_params.h  grain_synthesis.c  grain_synthesis.h  main.cpp  segmentation.cpp  segmentation.hpp
docs/: av1-spec.md  dpb-mgnt-pseudo-cpp.md  dpb-mgnt-pseudo-header.md  dpb-sequence-notes.md  dpb-sequence-with-av1-spec-notes.md  dpb_params_dav1d.md  dpb_walkthrough_cpp.md
imhex/: av1_au_data.hexpat
include/: Av1RefFrameMap.cpp  Av1RefFrameMap.h  av1-toolkit.h  av1_dpb_manager.cpp  av1_dpb_manager.h  av1_dpb_support.h
py-scripts/: av1_ivf_split.py
src/: main.cpp  obu_kit.h
(+42 files in other folders)
